--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "yup": "^1.6.1"
   },
   "scripts": {
-    "start": "DISABLE_ESLINT_PLUGIN=true react-scripts start",
+    "start": "FORK_TS_CHECKER_DISABLE=true FAST_REFRESH=false react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
