--- a/package.json
+++ b/package.json
@@ -28,16 +28,18 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.21.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
+    "serve": "^14.2.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
+    "webpack-dev-server": "^5.2.1",
     "yup": "^1.6.1"
   },
   "scripts": {
-    "start": "FORK_TS_CHECKER_DISABLE=true FAST_REFRESH=false react-scripts start",
-    "build": "react-scripts build",
+    "start": "serve -s build",
+    "build": "export NODE_OPTIONS=--max-old-space-size=4096 && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
