--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "yup": "^1.6.1"
   },
   "scripts": {
-    "start": "serve -s build",
+    "start": "export NODE_OPTIONS=--max-old-space-size=4096 && react-scripts start",
     "build": "export NODE_OPTIONS=--max-old-space-size=4096 && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
