--- a/package.json
+++ b/package.json
@@ -31,15 +31,14 @@
     "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
-    "serve": "^14.2.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "webpack-dev-server": "^5.2.1",
     "yup": "^1.6.1"
   },
   "scripts": {
-    "start": "export NODE_OPTIONS=--max-old-space-size=4096 && react-scripts start",
-    "build": "export NODE_OPTIONS=--max-old-space-size=4096 && react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
